<resources>
    <string name="app_name">TodoList</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be 6 digits</string>
    <string name="invalid_autentification">Authentication failed</string>
    <string name="login_failed">"Login failed"</string>
    <string name="fav_date">"Favourite-Datum"</string>
    <string name="date_fav">"Datum-Favourite"</string>
    <string name="write_fire">"Write to FireBase"</string>
    <string name="clear_fire">"Clear Firebase"</string>
    <string name="clear_db">"Clear LocalDB"</string>
    <string name="add_to_do">"Add to Do"</string>
    <string name="save">"Save"</string>
    <string name="fav">"Favourite"</string>
    <string name="pDate">"Pick a Date"</string>
    <string name="fall">"Fälligkeit"</string>
    <string name="desc">"Beschreibung"</string>
    <string name="name">"Name"</string>
    <string name="done">"Erledigt?"</string>
    <string name="upd">"Update"</string>
    <string name="del">"Delete"</string>
    <string name="upToDo">"Update To Do"</string>
    <string name="ueber">"ÜBERFÄLLIG!"</string>
    <string name="star">\u2605</string>
    <string name="check">\u2713</string>
    <string name="test">test</string>
    <string name="sync">Sync</string>
    <string name="test_email" translatable="false">carolina.wehrmann@gmx.de</string>
</resources>
