<?xml version="1.0" encoding="utf-8"?>

<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_height="wrap_content"
        android:layout_width="wrap_content">



    <item
            android:id="@+id/fav_date"
            android:title="@string/fav_date" />
    <item
            android:id="@+id/date_fav"
            android:title="@string/date_fav" />

    <item android:title="@string/write_fire" android:id="@+id/write_to_fb"
          android:icon="@android:drawable/ic_input_add" android:iconTint="#00E40B0B"/>

    <item android:title="@string/clear_fire" android:id="@+id/clear_fb" android:icon="@android:drawable/ic_delete"
    />
    <item android:title="@string/clear_db" android:id="@+id/clear_db"/>
    <item android:title="@string/sync" android:id="@+id/sync" android:visible="true"
          android:icon="@drawable/googleg_standard_color_18"/>

</menu>