<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.mad.todolist.todo.UpdateTaskActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:padding="16dp">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/upToDo"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline" />

        <EditText
                android:id="@+id/editTextTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name" />

        <EditText
                android:id="@+id/editTextDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/desc" />

        <TextView
                android:id="@+id/viewTextFinishBy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:hint="@string/fall"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"/>
        <Button
                android:id="@+id/buttonDatePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pDate"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

        <CheckBox
                android:id="@+id/checkedFavourite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fav" />

        <CheckBox
                android:id="@+id/checkBoxFinished"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/done" />

        <Button
                android:id="@+id/button_update"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:background="@color/colorPrimary"
                android:text="@string/upd"
                android:textAllCaps="false"
                android:textColor="@color/colorLight" />


        <Button
                android:id="@+id/button_delete"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:background="@color/colorRed"
                android:text="@string/del"
                android:textAllCaps="false"
                android:textColor="@color/colorLight" />


    </LinearLayout>


</RelativeLayout>