<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="7dp" android:orientation="vertical">

            <TextView
                    android:id="@+id/textViewStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    android:textAlignment="center"/>

            <TextView
                    android:id="@+id/textViewTask"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"/>

            <TextView
                    android:id="@+id/textViewDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

            <TextView
                    android:id="@+id/textViewFinishBy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

            <!--TextView
                    android:id="@+id/textViewFav"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/-->

            <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
                <CheckBox
                        android:id="@+id/checkedFavourite"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:text="@string/star" android:layout_marginLeft="73dp"/>

                <CheckBox
                        android:id="@+id/checkBoxFinished"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:text="@string/check"/>

                <!--Button
                        android:id="@+id/button_update"
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/colorPrimary"
                        android:text="@string/upd"
                        android:textAllCaps="false"
                        android:textColor="@color/colorLight" android:layout_marginStart="147dp"
                        android:layout_alignStart="@+id/checkBoxFinished"/-->

            </RelativeLayout>

            <TextView
                    android:id="@+id/overdue"
                    android:visibility="gone"
                    android:text="@string/ueber"
                    android:textColor="@color/colorRed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"/>


        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>